# FishLangCell

./: .gitignore  README.md  pyproject.toml
configs/data/: eval.yaml  foundation.yaml  testis.yaml
configs/model/: fish_geneformer_base.yaml  fish_geneformer_small.yaml  fish_langcell_base.yaml  fish_langcell_testis.yaml
configs/tokenization/: zebrafish_sequence_builder.yaml
configs/train/: align_multimodal.yaml  eval.yaml  pretrain_cell.yaml  tune_testis.yaml
configs/vocab/: id_policy.yaml  orthogroup.yaml  zebrafish_vocab.yaml
data/: data_inventory.tsv
data/interim/: data_inventory_template.tsv
data/ontology/: broad_fish_ontology.yaml  ontology_mapping.tsv  testis_ontology.yaml
data/text_corpus/: fish_celltype_definitions.jsonl  hierarchy_descriptions.jsonl  marker_sentences.jsonl  testis_celltype_definitions.jsonl
data/vocab/: fish_gene_vocab_v0.1.tsv  gene_symbol_to_ensembl.tsv  orthogroup_reference.tsv  zebrafish_gene_reference.tsv
docs/: PRD.md  cell_corpus_spec.md  data_inventory.md  dataset_decisions.md  gene_id_policy.md  gene_vocab_spec.md  ontology.md  release_checklist.md  text_corpus_spec.md  tokenization_spec.md  training_plan.md
manifests/: eval_datasets.tsv  foundation_datasets.tsv  testis_datasets.tsv
scripts/: README.md
src/fish_langcell/: __init__.py  cli.py
src/fish_langcell/benchmarks/: __init__.py  runner.py
src/fish_langcell/data/: __init__.py  anndata.py  governance.py  inventory.py
src/fish_langcell/inference/: __init__.py  export.py
src/fish_langcell/losses/: contrastive.py  matching.py  mlm.py
(+14 files in other folders)
