[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fish-langcell"
version = "0.1.0"
description = "Fish-native LangCell scaffold for single-cell multimodal annotation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Fish-LangCell Team" }]
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
data = ["anndata>=0.10"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
fish-langcell = "fish_langcell.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
